# GLML

./: GLML.opam  INFORMATION.md  Makefile  README.md  dune-project  flake.nix  index.html  main.js  shader.frag
.github/workflows/: deploy.yml
GLML/: GLML.opam  dune-project
GLML/lib/: dune
MLSL/: MLSL.opam  dune-project
MLSL/lib/: dune
benchmark/: bench.ml  bench_runner.ml  dune  runner.sh
compiler/: anf.ml  anf.mli  chomp.ml  chomp.mli  dune  glml_compiler.ml  glml_compiler.mli  glsl.ml  glsl.mli  lambda_lift.ml  lambda_lift.mli  lexer.ml  lexer.mli  lower_variants.ml  lower_variants.mli  monomorphize.ml  monomorphize.mli  parser.ml  parser.mli  patch_main.ml  patch_main.mli  stlc.ml  stlc.mli  tail_call.ml  tail_call.mli  translate.ml  typecheck.ml  typecheck.mli  uncurry.ml  uncurry.mli  uniquify.ml  uniquify.mli  utils.ml
examples/: 2d_sdf_variants.glml  checkerboard.glml  mandelbrot.glml  mouse_circle.glml  rainbow.glml  raymarch.glml  recursion.glml  warped_noise.glml
glml_compiler/: anf.ml  anf.mli  chomp.ml  chomp.mli  dune  glml_compiler.ml  glml_compiler.mli  glsl.ml  lexer.ml  lexer.mli  parser.ml  parser.mli  stlc.ml  stlc.mli  translate.ml  translate.mli  typecheck.ml  typecheck.mli  uncurry.mli  uniquify.ml  uniquify.mli  utils.ml  utils.mli
jsoo/: main.ml
playground/: dune  index.html  main.js  main.ml  package-lock.json  package.json  style.css  tsconfig.json  vite.config.ts
playground/src/: examples.ts  main.ts  monaco-extensions.ts  style.css
tests/: dune  examples_test.ml  glml_compiler_tests.ml
web/: .gitignore  index.html  main.js  main.ml  package-lock.json  package.json  shader.ml  vite.config.ts
web/src/: glml.d.ts  main.ts  renderer.ts  style.css
