(library
 (name glml_compiler)
 (modules
   utils
   glml_compiler

   ; Compiler Passes
   lexer
   chomp
   parser
   stlc
   uniquify
   typecheck
   monomorphize
   uncurry
   lambda_lift
   anf
   tail_call
   lower_variants
   translate
   patch_main
   glsl)
 (libraries core)
 (preprocess (pps ppx_jane))
 (inline_tests))
