(executable
 (modes js)
 (name main)
 (libraries
   js_of_ocaml
   bonsai_web
   bonsai_web_components.web_ui_codemirror
   bonsai_web_components.web_ui_form
   bonsai_web_components.codemirror_ocaml_with_janestreet_extensions
   bonsai_web_components.codemirror_themes
   core
   glml_compiler)
 (js_of_ocaml (javascript_files main.js))
 (preprocess
  (pps bonsai.ppx_bonsai ppx_jane ppx_html ppx_blob))
 (preprocessor_deps (source_tree ../examples)))
